# keepass-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
keepass_cli/: db.py  i18n.py  main.py
keepass_cli/locale/ko/LC_MESSAGES/: keepass_cli.mo  keepass_cli.po
kpassh/: db.py  i18n.py  main.py  ssh_agent.py
kpassh/locale/ko/LC_MESSAGES/: kpassh.mo  kpassh.po
megabird_pass/: db.py  main.py  ssh_agent.py
