[project]
name = "keepass_cli"
version = "0.2.0"
description = "KDBX password viewer TUI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "appdirs>=1.4.4",
    "bcrypt>=4.0.0",
    "cryptography>=46.0.5",
    "pykeepass>=4.1.1.post1",
    "textual>=0.80.0",
]

[project.scripts]
keepass-cli = "keepass_cli.main:main"
keepass-db = "keepass_cli.db:main"

[tool.setuptools.package-data]
keepass_cli = ["database.kdbx", "locale/*/LC_MESSAGES/*.mo"]

[tool.setuptools.packages.find]
include = ["keepass_cli"]
exclude = []

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
